@@ -42,11 +42,13 @@ case "$target_os" in
   CRT_ID=1
   MNO_CYGWIN=
   RUNTIME=crtdll
+  CRT0S=gcrt1.o
   ;;
 *cygwin*)
   CRT_ID=2
   MNO_CYGWIN=-mno-cygwin
   RUNTIME=msvcrt
+  CRT0S=gcrt0.o
   # Do not build libm.a when building under Cygwin winsup. Otherwise, it'll
   # overwrite Cygwin's one. Likewise for libgmon.a.
   ;;
@@ -55,6 +57,7 @@ case "$target_os" in
   CRT_ID=2
   MNO_CYGWIN=
   RUNTIME=msvcrt
+  CRT0S=gcrt2.o
   ;;
 esac
 
@@ -62,6 +65,7 @@ AC_SUBST(CRT_ID)
 AC_SUBST(RUNTIME)
 AC_SUBST(MNO_CYGWIN)
 AC_SUBST(LIBGMON_A)
+AC_SUBST(CRT0S)
 
 AC_PROG_INSTALL
 AC_OUTPUT(Makefile)
